Stage III. Description of ad models and reviews: refactoring.
