# openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Ads app API Documentation
+  title: API Documentation
   version: '1.0'
 servers:
   - url: http://localhost:8080
@@ -23,8 +23,6 @@ paths:
           description: Unauthorized
         '403':
           description: Forbidden
-        '404':
-          description: Not Found
   /users/me:
     get:
       tags:
@@ -40,10 +38,6 @@ paths:
           description: OK
         '401':
           description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
     patch:
       tags:
         - Пользователи
@@ -61,14 +55,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        '204':
-          description: No Content
         '401':
           description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
   /users/me/image:
     patch:
       tags:
@@ -89,8 +77,8 @@ paths:
       responses:
         '200':
           description: OK
-        '404':
-          description: Not Found
+        '401':
+          description: Unauthorized
 
   /register:
     post:
@@ -104,14 +92,8 @@ paths:
             schema:
               $ref: '#/components/schemas/RegisterReq'
       responses:
-        '404':
-          description: Not Found
         '201':
           description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
   /login:
     post:
       tags:
@@ -126,12 +108,8 @@ paths:
       responses:
         '200':
           description: OK
-        '404':
-          description: Not Found
         '401':
           description: Unauthorized
-        '403':
-          description: Forbidden
   /ads:
     get:
       tags:
@@ -171,10 +149,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Ads'
-        '404':
-          description: Not Found
-        '403':
-          description: Forbidden
         '401':
           description: Unauthorized
   /ads/{id}/comments:
@@ -197,8 +171,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ResponseWrapperComment'
-        '404':
-          description: Not Found
+        '401':
+          description: Unauthorized
 
     post:
       tags:
@@ -216,7 +190,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Comment'
+              $ref: '#/components/schemas/CreateComment'
       responses:
         '200':
           description: OK
@@ -224,10 +198,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Comment'
-        '404':
-          description: Not Found
-        '403':
-          description: Forbidden
         '401':
           description: Unauthorized
 
@@ -251,8 +221,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FullAds'
-        '404':
-          description: Not Found
+        '401':
+          description: Unauthorized
     delete:
       tags:
         - Объявления
@@ -297,8 +267,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Ads'
-        '404':
-          description: Not Found
         '403':
           description: Forbidden
         '401':
@@ -325,8 +293,6 @@ paths:
       responses:
         '200':
           description: OK
-        '404':
-          description: Not Found
         '403':
           description: Forbidden
         '401':
@@ -361,8 +327,6 @@ paths:
             'application/json':
               schema:
                 $ref: '#/components/schemas/Comment'
-        '404':
-          description: Not Found
         '403':
           description: Forbidden
         '401':
@@ -383,8 +347,6 @@ paths:
           description: OK
         '401':
           description: Unauthorized
-        '403':
-          description: Forbidden
   /ads/{id}/image:
     patch:
       tags:
@@ -419,8 +381,10 @@ paths:
                 items:
                   type: string
                   format: byte
-        '404':
-          description: Not Found
+        '403':
+          description: Forbidden
+        '401':
+          description: Unauthorized
 
 components:
   schemas:
@@ -483,6 +447,14 @@ components:
         title:
           type: string
           description: 'заголовок объявления'
+    CreateComment:
+      required:
+        - text
+      type: object
+      properties:
+        text:
+          type: string
+          description: 'текст комментария'
     Ads:
       type: object
       properties:
